--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,12 @@
 {
-  "name": "Getting Started Example",
-  "description": "Build an Extension!",
+  "name": "Mine Setter",
+  "description": "Some rest for your fingers.",
   "version": "1.0",
   "manifest_version": 3,
   "background": {
     "service_worker": "background.js"
   },
-  "permissions": [ "activeTab"],
-  "action": {
-    "default_popup": "popup.html"
-  },
+  "permissions": ["activeTab"],
   "content_scripts": [
     {
       "matches": [
