chore: manifest에 icons 추가

--- a/manifest.json
+++ b/manifest.json
@@ -3,9 +3,6 @@
   "description": "Some rest for your fingers.",
   "version": "1.0",
   "manifest_version": 3,
-  "background": {
-    "service_worker": "background.js"
-  },
   "permissions": ["activeTab"],
   "content_scripts": [
     {
@@ -16,5 +13,10 @@
         "content-script.js"
       ]
     }
-  ]
+  ],
+  "icons": {
+    "16": "/images/mine16.png",
+    "32": "/images/mine32.png",
+    "128": "/images/mine128.png"
+  }
 }
